# LegalAnki

./: .env.example  .gitignore  ANALISE_PROMPTS.md  CLAUDE.md  DEVELOPER.md  PRD.md  README.md  ROADMAP.md  legal_anki_cards.csv  legal_anki_cards.json  legal_anki_cards.txt  main.py  pyproject.toml  repomix-output.xml
.claude/.worker-tracking/ad82ed6c/: hivemind_find.marker  hivemind_store.marker  swarmmail_init.marker
docs/: ARCHITECTURE.md
src/legal_anki/: __init__.py  anki_connect.py  config.py  exporters.py  generator.py  models.py  parsers.py  serializers.py  utils.py  validators.py
src/legal_anki/llm/: __init__.py  openai_client.py  protocol.py
src/legal_anki/prompts/: __init__.py  system.py
tests/: conftest.py  test_anki_connect.py  test_exporters.py  test_generator.py  test_llm_client.py  test_parsers.py  test_utils.py  test_validators.py
